--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* border: 0; */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  font-size: 62.5%;
+  --primary-color: #536162;
+  --secondary-color: #424642;
+  --strong-color: #c06014;
+  --accent-strong-color: #e27319;
+  --window-color: #f3f4ed;
+  --bg-color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+label{
+  font-size: 1.8rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main{
+  background-color: var(--window-color);
+  height: 100vh;
+  margin: 0 20rem
+}
+
+form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+  min-height: 60rem;
+  /* background-color: var(--window-color); */
+  /* background-color: aliceblue; */
+}
+
+a{
+  text-decoration: none;
+  /* color: black; */
+  color: var(--primary-color);
+}
+
+.navbar a{
+  width: 100%;
+  height: 100%;
+  padding: 0.5rem 3rem;
+  /* color: dimgrey; */
+  color: var(--primary-color);
+  font-size: 1.8rem;
+  font-weight: 700;
+  box-sizing: border-box;
+  transition: background-color 0.5s, color 0.5s;
+}
+@media screen and (min-width:50rem){
+  .navbar a{
+    width: 30rem;
+    height: 100%;
+    /* padding: 0.5rem 3rem; */
+    /* color: dimgrey;
+    font-size: 1.8rem;
+    
+    box-sizing: border-box;
+    transition: background-color 0.5s, color 0.5s; */
+  }
+}
+.navbar a:hover{
+  background-color: lemonchiffon;
+  color: darkslategrey;
+}
+
+input[type='text']{
+  width: 30rem;
+  height: 5rem;
+  margin: 0.5rem 1rem;
+  /* outline-style: solid; */
+  /* outline-color: darkgray; */
+  /* outline-color: var(--strong-color); */
+  text-align: center;
+  resize: none;
+  border-radius: 0.7rem;
+  box-shadow: 0 0 0 0.3rem var(--strong-color);
+}
+
+.navbar {
+  background-color: rgb(252, 224, 182);
+  height: 8rem; /* 4rem=1boton */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border-bottom: 1rem solid var(--strong-color);
+}
+@media screen and (min-width:50rem){
+  .navbar {
+    height: 4rem;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+  }
+}
+
+.form-item{
+  width: 50rem;
+  /* background-color: darkturquoise; */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.submit-div{
+  display:flex;
+  flex-direction: column;
+}
+
+.main{
+  background-color: var(--window-color);
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
 }
